# solo-tid-project

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yaml
data/: preprocessed-mallCustomers.csv
docs/: informe.typ  main.tex  report.typ  template.typ
docs/classification/: report.typ
docs/clustering/: report.typ
docs/typst/: informe.typ  template.typ
notebooks/: analysis.ipynb  clustering.ipynb  perceptron.ipynb
notebooks/analysis/: analysis.ipynb
notebooks/clustering/: clustering.ipynb
solo_tid_project/: __main__.py
